--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+#lib/
 lib64/
 parts/
 sdist/
@@ -91,4 +91,4 @@ ENV/
 
 # temporary files
 *.json
-qald-*.txt
+input/*
